Try stopping hive meta store